infisical/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infisical
  namespace: infisical
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infisical
  template:
    metadata:
      labels:
        app: infisical
    spec:
      nodeSelector:
        kubernetes.io/hostname: yeager
      containers:
        - name: infisical
          image: infisical/infisical:latest@sha256:6b911e3938ac2ff385a782df59ce9272799be7976d26dc5667266a2aecac4116
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /api/status
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/status
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            limits:
              memory: "1Gi"
              cpu: "750m"
            requests:
              memory: "256Mi"
              cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: infisical
  namespace: infisical
spec:
  type: NodePort
  selector:
    app: infisical
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30820
      name: http
